# pharmacy

./: .gitignore  Cargo.toml  dataflow.md  test.db
dev-env/: install-env.sh
migrations/2020-05-06-144602_create_posts/: down.sql  up.sql
src/: db.rs  items.proto  main.rs  myws.rs  pmodels.rs
src/db/: models.rs  schema.rs
web/: Cargo.toml  live-code-server.sh
web/src/: lib.rs  main.rs
web/static/: index.html
