[package]
name = "pharmacy"
version = "0.1.0"
authors = ["m0ssc0de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[build-dependencies]
prost-build = { version = "0.5" }

[dependencies]
clap = "2.33.0"
actix = "0.9.0"
actix-web = "2.0"
actix-web-actors = "2.0.0"
actix-rt = "1.0"
serde = "1.0"
serde_derive = "1.0"
diesel = { version = "^1.1.0", features = ["sqlite"] }
dotenv = "0.9.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
bytes = "0.4"
prost = "0.5"
actix-codec = "0.2.0"
awc = "1.0.1"
futures = "0.3.1"
env_logger = "0.7"