[package]
name = "web"
version = "0.1.0"
authors = ["m0ssc0de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.16", package = "yew-stdweb" }
wasm-bindgen = "0.2"
failure = "0.1.8"